--- a/ci/config/mkdir_config.json
+++ b/ci/config/mkdir_config.json
@@ -4,6 +4,8 @@
     "ci/bin",
     "ci/config",
     "ci/tasks",
+    "demo",
+    "demo/mobile_tutorial",
     "src",
     "src/javascripts",
     "src/stylesheets",
