--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "p.js",
+  "name": "prari.js",
   "version": "0.0.0",
   "private": true,
   "description": "Generate parallax page from html.",
@@ -21,18 +21,12 @@
   },
   "homepage": "https://github.com/okunishinishi/p.js",
   "dependencies": {
-    "async": "^0.9.0",
-    "mkdirp": "^0.5.0",
-    "glob": "^4.0.2",
-    "apeman-util": "0.0.15",
-    "handlebars": "^2.0.0-alpha.4",
+    "apeman-util": "0.0.16",
     "commander": "^2.3.0",
-    "cli-color": "^0.3.2"
+    "marked": "^0.3.2"
   },
   "devDependencies": {
     "apeman-tasks": "0.0.9",
-    "clean-css": "^2.2.9",
-    "uglify-js": "^2.4.15",
     "nodeunit": "^0.9.0"
   }
 }
