modify doc [ci skip]

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prari",
+  "name": "parari",
   "version": "0.0.0",
   "private": true,
   "description": "Generate parallax page from html.",
