--- a/ci/configs/cp_config.json
+++ b/ci/configs/cp_config.json
@@ -8,6 +8,10 @@
         "dest": "assets/.third_party/fabric.js"
     },
     {
+        "src": "bower_components/html2canvas/build/html2canvas.js",
+        "dest": "assets/.third_party/html2canvas.js"
+    },
+    {
         "src": "bower_components/normalize.css/normalize.css",
         "dest": "assets/.third_party/normalize.css"
     },
