--- a/ci/configs/index_config.json
+++ b/ci/configs/index_config.json
@@ -26,6 +26,7 @@
         "doc": {
             "file": "parari",
             "module": "parari/lib/themes"
-        }
+        },
+        "descProperties": true
     }
 ]
