--- a/ci/configs/mkdir_config.json
+++ b/ci/configs/mkdir_config.json
@@ -13,12 +13,14 @@
         "doc/demo/parari-readme",
         "doc/coverage",
         "doc/readme",
+        "doc/resources",
         "lib",
         "lib/themes",
         "lib/commands",
         "test",
         "test/.work",
         "test/mocks",
+        "test/design_tests",
         "test/scneaio_tests",
         "test/unit_tests",
         "test/browser_unit_tests",
